--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@
 body {
   background-color: var(--bg-color);
   color: var(--font-color);
+  transition: all 0.3s ease-out;
 }
 
 /*Simple css to style it like a toggle switch*/
@@ -105,7 +106,6 @@ input:checked+.slider:before {
   flex-wrap: wrap;
   width: 100%;
   height: 80%;
-  background-color: var(--bg-color);
 }
 
 /* card styles */
