--- a/main.css
+++ b/main.css
@@ -25,6 +25,14 @@
 
 /* global styles */
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   background-color: var(--bg-color);
   color: var(--font-color);
@@ -92,7 +100,7 @@ input:checked+.slider:before {
 }
 
 .container {
-  vertical-align: middle;
+  height: 80%;
 }
 
 .container .strong {
